--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "rc": "1.0.1",
     "sails": "~0.12.11",
     "sails-disk": "~0.10.9",
-    "sails-mysql": "^0.11.5"
+    "sails-mysql": "^0.11.5",
+    "socket.io-redis": "^3.1.0"
   },
   "scripts": {
     "debug": "node debug app.js",
